# beezle

./: CLAUDE.md  Cargo.toml  README.md
prd/: 001-session-management-status.md  001-session-management-tickets.md  001-session-management.md  002-cli-args-clap-status.md  002-cli-args-clap-tickets.md  002-cli-args-clap.md  003-project-context-loader-status.md  003-project-context-loader-tickets.md  003-project-context-loader.md  004-command-bus-status.md  004-command-bus-tickets.md  004-command-bus.md  005-subagent-architecture-status.md  005-subagent-architecture-tickets.md  005-subagent-architecture.md  006-memory-system-status.md  006-memory-system-tickets.md  006-memory-system.md  007-permissions-system-qa.md  007-permissions-system-status.md  007-permissions-system-tickets.md  007-permissions-system.md  008-improvement-loop.md  009-tracing-setup-status.md  009-tracing-setup-tickets.md  009-tracing-setup.md  010-multi-agent-system-qa.md  010-multi-agent-system-status.md  010-multi-agent-system-tickets.md  010-multi-agent-system.md  011-event-driven-rendering-status.md  011-event-driven-rendering-tickets.md  011-event-driven-rendering.md  012-web-tools.md  013-prompt-with-sender-migration-status.md  013-prompt-with-sender-migration-tickets.md  013-prompt-with-sender-migration.md
prd/005-subagent-architecture-reports/: ticket-01-impl.md  ticket-01-review.md  ticket-02-impl.md  ticket-02-review.md  ticket-03-impl.md  ticket-03-review.md
prd/006-memory-system-reports/: ticket-01-impl.md  ticket-01-review.md  ticket-02-impl.md  ticket-02-review.md  (+6 more)
src/: lib.rs  main.rs
(+48 files in other folders)
