[package]
name = "beezle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.50.0", features = ["full"] }
toml = "0.8"
tracing = "0.1"
yoagent = "0.5.3"

[dev-dependencies]
tempfile = "3"
